# data-source

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  environment.yaml  setup.cfg
.github/workflows/: docs.yml
data/20190701_button_a_et_al/: rxn_set.txt
data_source/: __init__.py
data_source/abstract_base/: __init__.py  abstract_base.py
data_source/base/: __init__.py  base.py
data_source/compound/: __init__.py  chembl.py  compound.py  miscellaneous.py  zinc20.py
data_source/compound_pattern/: __init__.py  compound_pattern.py
data_source/reaction/: __init__.py  crd.py  miscellaneous.py  ord.py  reaction.py  rhea.py  uspto.py
data_source/reaction_pattern/: __init__.py  reaction_pattern.py
data_source/reaction_rule/: __init__.py  miscellaneous.py  reaction_rule.py  retro_rules.py
docs/source/: conf.py  index.rst
references/: 20121009_lowe_d_m.md  20131008_kraut_h_et_al.md  20141226_schneider_n_et_al.md  20161014_wei_j_n_et_al.md  20161122_schneider_n_et_al.md  20170418_coley_c_w_et_al.md  20171116_coley_c_w_et_al.md  20171229_jin_w_et_al.md  20180421_avramova_s_et_al.md  20180622_schwaller_p_et_al.md  20181013_duigou_t_et_al.md  20181221_bradshaw_j_et_al.md  20190701_button_a_et_al.md  20200508_grambow_c_a_et_al.md  20201029_irwin_j_j_et_al.md  20201218_polykovskiy_d_et_al.md  20210128_schwaller_p_et_al.md  20211102_kearnes_s_m_et_al.md  20211102_lin_a_et_al.md  20211110_bansal_p_et_al.md  20220718_spiekermann_k_et_al.md  20230215_tingle_b_i_et_al.md  20231102_zdrazil_b_et_al.md  20240810_chen_s_et_al.md
references/2008/: 20080307_brenk_r_et_al.md
references/2010/: 20100204_baell_j_b_and_holloway_g_a.md
references/2012/: 20121009_lowe_d_m.md
references/2013/: 20131008_kraut_h_et_al.md
references/2017/: 20170905_liu_b_et_al.md  (+3 more)
scripts/: download_extract_and_format_data.py
(+126 files in other folders)
