[metadata]
name = data_source
version = 2025.4.1
author = Haris Hasic
description = The computer-assisted chemical synthesis Data Source research project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    chemical-compound-patterns,
    chemical-compounds,
    chemical-reaction-patterns,
    chemical-reactions,
    chemical-synthesis,
    data,
    data-source,
    database,
    dataset

[options]
packages = find:

[options.packages.find]
include = data_source*
