[metadata]
name = ncsw-data-source
version = 2025.9.2
author = Haris Hasic
description = The computer-assisted chemical synthesis data source research project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    chemical-compound-patterns,
    chemical-compounds,
    chemical-reaction-patterns,
    chemical-reactions,
    data,
    data-source,
    database,
    dataset

[options]
packages = find:
install_requires =
    ord-schema
    py7zr
    pyarrow
    pqdm
    rdkit
    requests
    tqdm

[options.packages.find]
include = data_source*
